# p04_kinematics

./: Cargo.toml  README.md
examples/: one_segment.rs  rainbow_tri.wgsl
src/: ik.rs  main.rs  segment.rs
