[package]
name = "p04_ik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = {version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
futures = "0.3.28"
gfx-hal = "0.9.0"
image = "0.24.6"
log = "0.4.17"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.15.1"
winit = "0.28.3"

[[example]]
name = "one_segment"
path = "examples/one_segment.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"
